--- a/main.html
+++ b/main.html
@@ -8,7 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <div class="book-library">
+    <h2 class="library-title">Book Library</h2>
+
+    <div class="book">
+      <img class="book-cover"
+           src="SPY_IN_THE_AMBER_IMAGE_LINK"
+           alt="Spy in the Amber cover">
+      <h3 class="book-title">SPY IN THE AMBER</h3>
+      <p class="book-author">BY Manohar Malgonkar</p>
+      <div class="book-price">Rs. 299</div>
+    </div>
+
+    <div class="book">
+      <img class="book-cover"
+           src="SACRED_GAMES_IMAGE_LINK"
+           alt="Sacred Games cover">
+      <h3 class="book-title">Sacred Games</h3>
+      <p class="book-author">By Vikram Chandra</p>
+      <div class="book-price">Rs. 199</div>
+    </div>
+
+    <div class="book">
+      <img class="book-cover"
+           src="BYOMKESH_BAKSHI_IMAGE_LINK"
+           alt="Byomkesh Bakshi cover">
+      <h3 class="book-title">BYOMKESH BAKSHI</h3>
+      <p class="book-author">By Sharadindu Bandyopadhyay</p>
+      <div class="book-price">Rs. 249</div>
+    </div>
+
+	</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
